--- a/_posts/2016-03-29-Brief Bio.md
+++ b/_posts/2016-03-29-Brief Bio.md
@@ -5,12 +5,15 @@ layout: post
 
 
 
-I am a Master's Student in the Computer Science Department at University of Waterloo. My research interests are in Machine Learning, Data Mining, Natural Language Processing, Artificial Intelligence, Graph based Semi Supervised Learning and Deep Learning. My thesis is based on Social Network Analysis and Machine Learning. The aim is to develop user profiles based on Github Data. I work with [Professor Jesse Hoey](https://cs.uwaterloo.ca/~jhoey/).
+I am a Master's Student in the David R. Cheriton School of Computer Science, University of Waterloo. My research interests lie in Artificial Intelligence, Machine Learning, and reasoning with uncertainty. My thesis topic is goal recognition with uncertainty. The application field is smart home. The aim is to design and develop intelligent assistance system to guide people with memory impairment or brain injury in daily tasks. The goal tracking and reasoning engine is based on hierarchical task recognition with uncertainty. I work with [Professor Jesse Hoey](https://cs.uwaterloo.ca/~jhoey/).
 <br>
 <br>
-I graduated from BITS Pilani , Goa Campus in 2014 after which I  worked as a **Data Scientist** at [McGraw Hill Financial](https://www.spcapitaliq.com/). My work there was mostly on Natural Language Processing and Information Retrival. My main project at McGraw Hill Financial was designing an ***Information extraction system for the provision of financial intelligence***, for which we also filed a U.S Patent.
+I got a **master's** degree in Systems Engineering and a bachelor's degree in Logistics Engineering from the [Huazhong University of Science and Technology](http://english.hust.edu.cn/). My thesis topic for the master degree is automated planning and its application to emergency response task planning with temporal constraints. 
+
+
+
  
-My **Curriculum Vitae** can be found  [here]({{ site.url }}/assets/resume.pdf) .
+My **Curriculum Vitae** can be found  [here]({{ site.url }}/assets/DanWangResume.pdf) .
 
  
 
